# component-model

./: README.md
adder/: Cargo.toml
adder/src/: lib.rs
adder/wit/: adder.wit
calculator/: Cargo.toml
calculator/src/: lib.rs
calculator/wit/: calculator.wit
command/: Cargo.toml
command/src/: main.rs
divider/: .gitignore  Cargo.toml  app.py  requirements.txt
divider-jco/: .gitignore  commands.txt  divider-jco.js  package.json
divider-jco/wit/: divider-jco.wit
divider/src/: lib.rs
divider/wit/: divider.wit
multiplier/: app.py  commands.txt
multiplier/wit/: multiplier.wit
subtractor/: .gitignore  Cargo.toml
subtractor/src/: lib.rs
subtractor/wit/: subtractor.wit
