[package]
name = "calculator"
version = "0.1.0"
edition = "2021"


[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }


[lib]
crate-type = ["cdylib"]


[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true


[package.metadata.component]
package = "docs:calculator"


[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../adder/wit/adder.wit" }
"docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
"docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
"docs:divider" = { path = "../divider/wit/divider.wit" }
"docs:divider-jco" = { path = "../divider-jco/wit/divider-jco.wit" }


[package.metadata.component.dependencies]


[package.metadata.component.target]
path = "./wit/calculator.wit"
world = "calculator"
