[package]
name = "command"
version = "0.1.0"
edition = "2021"


[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
anyhow = "1.0.93"
clap = { version = "4.3.19", features = ["derive"] }


[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true


[package.metadata.component.dependencies]


[package.metadata.component.target]
path = "../calculator/wit/calculator.wit"
world = "app"


[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../adder/wit/adder.wit" }
"docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
"docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
"docs:divider" = { path = "../divider/wit/divider.wit" }
